results/SVCOMP/4-shot/log-AlarmOutputs-2024_03_18_04_24_48.txt
import java.util.Random;

final class Verifier {
    //@ ensures \result == (\exists int i; true; true);
    public static int nondetInt() {
        return new Random().nextInt();
    }
}

public class AlarmOutputs {
    public int isAudioDisabled = Verifier.nondetInt();
    public int notificationMessage = Verifier.nondetInt();
    public int audioNotificationCommand = Verifier.nondetInt();
    public int highestLevelAlarm = Verifier.nondetInt();
    public int logMessageId = Verifier.nondetInt();
}
/home/max/Documents/JMLGPT/tmp/AlarmOutputs.java:4: error: incomparable types: int and boolean
    //@ ensures \result == (\exists int i; true; true);
                        ^
1 error

